--- a/final_assignment_1/toxiccomments_first_full_iteration_v1.ipynb
+++ b/final_assignment_1/toxiccomments_first_full_iteration_v1.ipynb
@@ -338,6 +338,7 @@
    "source": [
     "from sklearn import linear_model\n",
     "svm = linear_model.SGDClassifier()\n",
+    "# sklearn.svm.SVC\n",
     "svm.fit(X_train, y_train)\n",
     "\n",
     "svm_performance_train = BinaryClassificationPerformance(svm.predict(X_train), y_train, 'svm_train')\n",
